# binance-api

./: Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
examples/: account.rs
src/: account.rs  api.rs  auth.rs  builder.rs  client.rs  config.rs  constant.rs  error.rs  general.rs  lib.rs  model.rs  savings.rs  util.rs
