[package]
name = "binance-api"
version = "0.3.0"
edition = "2024"
rust-version = "1.85.0"
publish = false

[dependencies]
hex = "0.4"
hmac = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["http2", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
sha2 = "0.10"
url = "2.5"

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
